# can-i-use-terminal.github.io

./: README.md  build.py  flake.nix  pyproject.toml  template.html  template.liquid
.github/workflows/: deploy.yml
data/: root.yml
data/terminals/: alacritty.yml  contour.yml  darktile.yml  elementary_terminal.yml  far2l.yml  foot.yml  gnome_terminal.yml  hterm.yml  iterm2.yml  kitty.yml  konsole.yml  mintty.yml  mobaxterm.yml  qterminal.yml  rio.yml  st.yml  terminal_macos.yml  termux.yml  tmux.yml  urxvt.yml  vscode.yml  wezterm.yml  windows_terminal.yml  xterm.yml  xterm_js.yml  zellij.yml
static/: main.css
templates/: feature.liquid  index.liquid  terminal.liquid
